axum-macros/tests/from_request/fail/state_infer_multiple_different_types.stderr
error: can't infer state type, please add #[from_request(state = StateType)] attribute
 --> tests/from_request/fail/state_infer_multiple_different_types.rs:4:10
  |
4 | #[derive(FromRequest)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromRequest` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Extractor: FromRequest<AppState, Body>` is not satisfied
  --> tests/from_request/fail/state_infer_multiple_different_types.rs:18:5
   |
18 |     Extractor: axum::extract::FromRequest<AppState, axum::body::Body, Rejection = axum::response::Response>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromRequest<AppState, Body>` is not implemented for `Extractor`
   |
   = help: the following other types implement trait `FromRequest<S, B, M>`:
             (T1, T2)
             (T1, T2, T3)
             (T1, T2, T3, T4)
             (T1, T2, T3, T4, T5)
             (T1, T2, T3, T4, T5, T6)
             (T1, T2, T3, T4, T5, T6, T7)
             (T1, T2, T3, T4, T5, T6, T7, T8)
             (T1, T2, T3, T4, T5, T6, T7, T8, T9)
           and 18 others
   = help: see issue #48214
